# pdg_decoder

./: LICENSE  README.md  pdg_decoder.py  pdg_dll_decoder.py  pyproject.toml
tests/pdg_files/: 000001.pdg  000002.pdg  000005.pdg  000007.pdg  000010.pdg  000011.pdg  000012.pdg  000013.pdg  000019.pdg  000020.pdg  000021.pdg  000025.pdg  000030.pdg  000031.pdg  000032.pdg  000033.pdg  000035.pdg  000038.pdg  000039.pdg  000040.001  000040.002  000041.pdg  000042.pdg  000043.pdg  bok001.pdg  bok002.pdg  bok003.pdg  bok004.pdg  bok005.pdg  bok006.pdg  bok007.pdg  fow001.pdg  leg001.pdg  note.txt
tests/pdg_files_decrypted/: 000001.djvu  000002.djvu  000013.djvu  000030.djvu  000040.000  000041.djvu  000042.djvu  bok001.djvu  bok002.djvu  bok003.djvu  bok004.djvu  bok005.djvu  bok006.djvu  bookInfo.txt  fow001.djvu  leg001.djvu
tests/pdg_files_failed/: 000008.pdg  000009.pdg  000017.pdg  000023.pdg
tests/pdg_files_failed_decrypted/: 000024.pdg
